v1/docs/ModelsTemplateRegex.md
# ModelsTemplateRegex

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**TemplateId** | Pointer to **int32** |  | [optional] 
**SubjectPart** | Pointer to **string** |  | [optional] 
**Regex** | Pointer to **string** |  | [optional] 
**Error** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsTemplateRegex

`func NewModelsTemplateRegex() *ModelsTemplateRegex`

NewModelsTemplateRegex instantiates a new ModelsTemplateRegex object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsTemplateRegexWithDefaults

`func NewModelsTemplateRegexWithDefaults() *ModelsTemplateRegex`

NewModelsTemplateRegexWithDefaults instantiates a new ModelsTemplateRegex object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetTemplateId

`func (o *ModelsTemplateRegex) GetTemplateId() int32`

GetTemplateId returns the TemplateId field if non-nil, zero value otherwise.

### GetTemplateIdOk

`func (o *ModelsTemplateRegex) GetTemplateIdOk() (*int32, bool)`

GetTemplateIdOk returns a tuple with the TemplateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetTemplateId

`func (o *ModelsTemplateRegex) SetTemplateId(v int32)`

SetTemplateId sets TemplateId field to given value.

### HasTemplateId

`func (o *ModelsTemplateRegex) HasTemplateId() bool`

HasTemplateId returns a boolean if a field has been set.

### GetSubjectPart

`func (o *ModelsTemplateRegex) GetSubjectPart() string`

GetSubjectPart returns the SubjectPart field if non-nil, zero value otherwise.

### GetSubjectPartOk

`func (o *ModelsTemplateRegex) GetSubjectPartOk() (*string, bool)`

GetSubjectPartOk returns a tuple with the SubjectPart field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSubjectPart

`func (o *ModelsTemplateRegex) SetSubjectPart(v string)`

SetSubjectPart sets SubjectPart field to given value.

### HasSubjectPart

`func (o *ModelsTemplateRegex) HasSubjectPart() bool`

HasSubjectPart returns a boolean if a field has been set.

### GetRegex

`func (o *ModelsTemplateRegex) GetRegex() string`

GetRegex returns the Regex field if non-nil, zero value otherwise.

### GetRegexOk

`func (o *ModelsTemplateRegex) GetRegexOk() (*string, bool)`

GetRegexOk returns a tuple with the Regex field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRegex

`func (o *ModelsTemplateRegex) SetRegex(v string)`

SetRegex sets Regex field to given value.

### HasRegex

`func (o *ModelsTemplateRegex) HasRegex() bool`

HasRegex returns a boolean if a field has been set.

### GetError

`func (o *ModelsTemplateRegex) GetError() string`

GetError returns the Error field if non-nil, zero value otherwise.

### GetErrorOk

`func (o *ModelsTemplateRegex) GetErrorOk() (*string, bool)`

GetErrorOk returns a tuple with the Error field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetError

`func (o *ModelsTemplateRegex) SetError(v string)`

SetError sets Error field to given value.

### HasError

`func (o *ModelsTemplateRegex) HasError() bool`

HasError returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


